@@ -1,4 +1,5 @@
 04/14/2009
+- fixed compile_id handling on {include} tags
 - fixed append/prepend attributes in {block} tag
 - added  {if  'expression' is in 'array'}  syntax
 - use crc32 as hash for compiled config files.
